# datafold

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTORS  Dockerfile  Dockerfile.ci  LICENSE  LICENSES_bundled  MANIFEST.in  Makefile  PyDMDTutorial.ipynb  PyDMDTutorial.py  README.md  README.rst  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  zpk_experimental.py
datafold/: __init__.py  _decorators.py  _version.py  decorators.py  version.py
datafold/appfold/: __init__.py  _edmd.py  analysis.py  edmd.py  forcing.py  kmpc.py  mpc.py  surrogate.py
datafold/appfold/tests/: test_edmd.py  test_kmpc.py
datafold/dynfold/: __init__.py  base.py  compose.py  dictlearning.py  diffusion_maps.py  dmap.py  dmd.py  dynsystem.py  geometric_harmonics.py  gpr.py  gpu_cusparse.py  gpu_eigensolver.py  jsf.py  kernel.py  koopman.py  operator.py  outofsample.py  plot.py  plot_interactive.py  roseland.py  system_evolution.py  transform.py  utils.py
datafold/dynfold/tests/: helper.py  test_base.py  test_compose.py  test_diffusion_maps.py  test_dmap.py  test_dmap_kernel.py  test_dmd.py  test_eigensolver.py  test_geometric_harmonics.py  test_helper.py  test_jsf.py  test_local_regression_selection.py  test_lookups.py  test_outofsample.py  test_roseland.py  test_transform.py
datafold/pcfold/: __init__.py  _gpu_cusparse.py  _gpu_eigensolver.py  distance.py  eigsolver.py  estimators.py  kernels.py  pointcloud.py
datafold/pcfold/tests/: allutils.py  (+13 more)
datafold/utils/: _systems.py  burger_eq.py  burgers_test.py  datastructure.py  general.py  kmpc.py  math.py  maths.py  pendulum-script.py  plot.py  typing.py
doc/: build_full.sh  full_build.sh
doc/source/: api.rst  appfold.rst  conda_install_info.rst  conf.py  contributing.rst  devapi.rst  dynfold.rst  generate_tutorials_page.py  gettingstarted.rst  include_tutorials.py  index.rst  intro.rst  pcfold.rst  references.rst  todolist.rst  verify_bibliography.py
examples/tests/: test_notebooks.py
examples/tutorials/: EDMD_on_limit_cycle.ipynb  diffusion maps - digit clustering.ipynb  diffusion maps - swissroll.ipynb  gaussian processes - swissroll.ipynb  koopman_operator.ipynb  paths.py  subsampling.ipynb
gym_test/: run.py
joss_paper/: paper.bib  paper.md  paper_long.md
misc/performance/: microbenchmark_aux.py  microbenchmark_brute_distance.py  microbenchmark_diag_matrix.py  microbenchmark_exp_matrix.py  microbenchmark_gradient.py  microbenchmark_kernel_eigvect.py  microbenchmark_kth_nn.py  microbenchmark_numba.py  microbenchmark_sparse_outer_division.py  microbenchmark_stochastic_matrix.py
tutorials/: 01_basic_datastructures.ipynb  01_datastructures.ipynb  02_basic_pcm_subsampling.ipynb  02_pcm_subsampling.ipynb  03_basic_dmap_scurve.ipynb  03_dmap_scurve.ipynb  04_basic_dmap_digitclustering.ipynb  04_dmap_digitclustering.ipynb  05_basic_gh_oos.ipynb  05_roseland_scurve_digits.ipynb  06_basic_edmd_limitcycle.ipynb  06_dmap_mahalanobis_kernel.ipynb  07_basic_jsf_common_eigensystem.ipynb  07_jsf_common_eigensystem.ipynb  08_basic_jsf_common_eigensystem.ipynb  08_basic_roseland_scurve_digits.ipynb  08_gh_oos.ipynb  09_basic_koopman_mpc.ipynb  09_basic_roseland_scurve_digits.ipynb  09_dmd_mixed_spatial_signals.ipynb  09_edmd_limitcycle.ipynb  10_dmd_control.ipynb  10_edmd_limitcycle.ipynb  10_kmpc_flowcontrol.ipynb  10_koopman_mpc.html  10_koopman_mpc.ipynb  10_koopman_mpc.py  10_online_dmd.ipynb  11_edmd_control.ipynb  11_koopman_mpc.ipynb  11_online_dmd.ipynb  12_EDMD_with_dictionary_learning.ipynb  12_kmpc_flowcontrol.ipynb  12_kmpc_motor_engine.ipynb  12_online_dmd.ipynb  13_EDMD_with_dictionary_learning.ipynb  13_kmpc_flowcontrol.ipynb  13_kmpc_motor_engine.ipynb  13_online_dmd.ipynb  14_kmpc_motor_engine.ipynb  (+37 more)
tutorials/10_koopman_mpc/: 10_koopman_mpc.ipynb
tutorials/11_koopman_mpc/: 11_koopman_mpc.ipynb  koopman_mpc.ipynb  koopman_mpc.py  requirements.txt
tutorials/docs/: 06_basic_edmd_limitcycle.ipynb  README.rst  limit_cycle.py
tutorials/edmd-analysis/: .gitattributes  20220503-tutorial.ipynb  20220503-tutorial.py
tutorials/misc/: Hyperparameter optimization - dmaps.ipynb  README.rst  basic_ckNN_manifold_learning.ipynb
tutorials/pydmd2delete/: tutorial-10-paramdmd.py  tutorial-10-paramdmd_datafold.py  tutorial-10-paramdmd_datafold_edmd.py
tutorials/tests/: test_notebooks.py
(+54 files in other folders)
