[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=43.0.0", "wheel"]  # PEP 508 specifications.


[tool.black]
# https://black.readthedocs.io/en/stable/?badge=stable
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \\datafold.egg-info
    | \.idea
    | \.vscode
    | \.ruff_cache
    | \.run
    | \.venv
    | \__pycache__
    | \.pytest_cache
    | \.mypy_cache
    | \build
    | \\dist
    | \\joss\_paper
    | \\coverage
  )/
)
'''


[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/customize.html
minversion = "7.0"
pythonpath = "/datafold"


[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/config.html#
source=["datafold"]
omit=["*/tests/*",
      "datafold/_version.py",
      "datafold/_decorators.py",
      "datafold/__init__.py",
      "datafold/*/__init__.py",
      "datafold/utils/_systems.py",
      "datafold/utils/plot.py"]

[tool.coverage.report]
exclude_lines =["pragma: no cover",
                "if __name__ == .__main__.:"]


[tool.ruff]
include = ["*.py"]

# mostly taken from pandas
line-length = 95
target-version = "py39"
fix = false
unfixable = ["E711"]

select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # pydocstyle
  # "D",
  # flake8-2020
  "YTT",
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  "TCH",
  # NumPy
  "NPY",
  # flake8-use-pathlib
  "PTH",
  "RUF100",
  # TODO: may be included in the future
  # Pandas  # may require some configuration
  # "PD",
  # "C90" # detects too complex functions
  # "pydocstyle" # requires a lot of work
  # "ANN" # requires a lot of work
]

ignore = [
  # space before : (needed for how black formats slicing)
  # "E203",  # not yet implemented
  # module level import not at top of file
  "E402",
  # tailing whitespace (already included in autoformatters in black and pre-commit hook)
  "W291",
  # do not assign a lambda expression, use a def
  "E731",
  # controversial
  "B008",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Function definition does not bind loop variable
  "B023",
  # Checks that don't pass yet
  # Within an except clause, raise exceptions with ...
  "B904",
  # Magic number
  "PLR2004",
  # Outer loop variable overwritten by inner assignment
  "PLW2901",
  # Consider `elif` instead of `else` then `if` to remove indentation level
  "PLR5501",
]

exclude = [
  ".mypy_cache/",
  ".pytest_cache/",
  ".venv/",
  "datafold.egg-info/",
  ".run/",
  "coverage/",
  "build/",
]

[tool.ruff.pydocstyle]
convention = "numpy"  # only set if ruleset "D" is included sometime in the future

[tool.ruff.per-file-ignores]
# relative imports allowed for asv_bench
"datafold/*/__init__.py" = ["F401"]


[tool.isort]
# https://pycqa.github.io/isort/
# see https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"
